# robot_ws

src/.codegpt/: head
src/dual_arm/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/dual_arm/config/: dual_arm_controllers.yaml  dual_bridge.yaml
src/dual_arm/launch/: dual_gazebo.launch.py  moveit_rviz.launch.py
src/dual_arm/rviz/: dual_config.rviz  dual_config2.rviz  dual_config3.rviz  dual_config4.rviz
src/dual_arm/scripts/: pointcloud_frame_modifier_node.py
src/dual_arm/worlds/: worlds.sdf
src/franka_ros2/dual_moveit/: .setup_assistant  package.xml
src/franka_ros2/dual_moveit/config/: dual_arm.ros2_control.xacro  dual_arm.srdf  dual_arm.srdf.xacro  dual_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/franka_ros2/franka_description/end_effectors/common/: dual_hand.xacro  dual_utils.xacro  franka_hand.xacro
src/franka_ros2/franka_description/robots/common/: dual_arm.ros2_control.xacro  dual_arm.xacro  dual_robot.xacro  franka_arm.ros2_control.xacro  franka_robot.xacro
src/franka_ros2/franka_description/robots/dual_arm/: dual_arm.urdf.xacro
src/franka_ros2/franka_fr3_moveit_config/config/: fr3_controllers.yaml  sensors_3d.yaml
src/franka_ros2/franka_fr3_moveit_config/launch/: moveit.launch.py
src/franka_ros2/franka_fr3_moveit_config/srdf/: fr3_arm_hand.xacro  hand.xacro
src/franka_ros2/franka_gazebo/franka_gazebo_bringup/: package.xml
src/franka_ros2/franka_gazebo/franka_gazebo_bringup/launch/: gazebo_joint_impedance_controller_example.launch.py
src/realsense_ros_gazebo/: CMakeLists.txt
src/realsense_ros_gazebo/xacro/: depthcam.xacro  fp3_camera.xacro  fr3_camera.xacro  real_camera.xacro  top_camera.xacro
src/robot_gazebo/compliant_controllers/: CMakeLists.txt  compliant_controllers.xml  package.xml
src/robot_gazebo/compliant_controllers/include/compliant_controllers/: joint_impedance_controller.hpp
src/robot_gazebo/compliant_controllers/launch/: gazebo_joint_impedance_controller.launch.py
src/robot_gazebo/compliant_controllers/scripts/: test_pin.py
src/robot_gazebo/compliant_controllers/src/: compliant_control.cpp  joint_impedance_controller.cpp
src/robot_gazebo/panda_gazebo/: CMakeLists.txt  package.xml
src/robot_gazebo/panda_gazebo/launch/: demo_panda_gazebo.launch.py  moveit_rviz.launch.py  panda_gazebo.launch.py
src/robot_gazebo/panda_gazebo/rviz/: moveit.rviz  moveit2.rviz
src/robot_gazebo/panda_gazebo/scripts/: pointcloud_frame_modifier.py  tfm.py
src/robot_gazebo/panda_gazebo/worlds/ASICS_HyperRocketgirl_SP_5_WhiteMalibu_BlueBlack/: model.sdf
src/robot_gazebo/panda_gazebo/worlds/CLIMACOOL_BOAT_BREEZE_IE6CyqSaDwN/: metadata.pbtxt  model.config  model.sdf
src/robot_gazebo/panda_gazebo/worlds/D435/: model.sdf
src/robot_gazebo/panda_gazebo/worlds/D_ROSE_ENGLEWOOD_II/: metadata.pbtxt  model.config  model.sdf
src/robot_gazebo/panda_gazebo/worlds/JUICER_SET/: metadata.pbtxt  model.config  model.sdf
src/robot_gazebo/panda_gazebo/worlds/SLACK_CRUISER/: metadata.pbtxt  model.config  model.sdf
