<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panda_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="laplacehurt@gmail.com">xiaomeng</maintainer>
  <license>TODO: License declaration</license>
 
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>ros_gz</depend> 
  <depend>sdformat_urdf</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>franka_description</depend>
  <depend>franka_ign_ros2_control</depend>
  <depend>robot_moveit_configm</depend>
  <depend>forward_command_controller</depend>
  <depend>octomap</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>launch</build_depend>
  <exec_depend>launch</exec_depend>
 
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
